changed name to SafeStudy

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bb"
-    tools:context=".MapActivity">
+    tools:context="com.example.SafeStudy.MapActivity">
 
     <SearchView
         android:id="@+id/searchView"
