--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.SafeStudy.SearchActivity">
+    tools:context="com.example.SafeStudy.SearchActivity"
+    android:background="@drawable/bb">
 
     <ImageView
         android:id="@+id/imageView"
@@ -19,7 +20,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,9 +40,19 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" Chemistry \n 2/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
+
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -48,14 +60,24 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
+                    android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" Digital Art \n 3/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#F57F17" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -63,14 +85,23 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" History \n 1/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#B71C1C" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -78,14 +109,23 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" Film \n 9/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#33691E" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -93,14 +133,23 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" English Literature \n 4/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#E040FB" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -108,14 +157,22 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" French \n 2/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -123,14 +180,23 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" Geology \n 1/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#7C4DFF" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -138,14 +204,23 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name and Description..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" Sports Science \n 5/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
+            <Button
+                android:id="@+id/button12"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Join"
+                app:backgroundTint="#00838F" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -153,14 +228,17 @@
                 android:layout_margin="6dp"
                 android:background="@color/design_default_color_secondary_variant"
                 app:cardCornerRadius="6dp"
-                app:cardElevation="6dp">
+                app:cardElevation="6dp">>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="Frist Group Name andDescription..........">
-                </TextView>
+                    android:gravity="center"
+                    android:text=" Medical Science \n 5/10 members"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 
