--- a/app/src/main/res/layout/activity_create.xml
+++ b/app/src/main/res/layout/activity_create.xml
@@ -27,7 +27,7 @@
         android:hint="Enter Group Name"
         android:inputType="text"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#A1FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/etGroupDes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -42,7 +42,7 @@
         android:hint="Enter Description"
         android:inputType="text"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#A1FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/etKeywords"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
@@ -58,7 +58,7 @@
         android:hint="Enter Keywords"
         android:inputType="text"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#A1FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etGroupDes" />
@@ -72,7 +72,7 @@
         android:hint="Enter members limit"
         android:inputType="text"
         android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#A1FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/btnCreate"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
