--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,19 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#383aa1"
     tools:context="com.example.SafeStudy.ProfileActivity">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="210dp"
-        android:background="@color/teal_200"/>
+        android:background="#5254ab" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp">
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -26,71 +27,71 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/profile"
                 android:layout_centerHorizontal="true"
-                android:elevation="1dp"/>
+                android:elevation="1dp"
+                android:src="@drawable/profile" />
 
-                <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginTop="85dp"
+                    app:cardCornerRadius="10dp"
+                    app:contentPaddingBottom="15dp"
+                    app:contentPaddingLeft="15dp"
+                    app:contentPaddingRight="15dp"
+                    app:contentPaddingTop="15dp">
 
-                    <androidx.cardview.widget.CardView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="85dp"
-                        app:contentPaddingTop="15dp"
-                        app:contentPaddingRight="15dp"
-                        app:contentPaddingLeft="15dp"
-                        app:contentPaddingBottom="15dp"
-                        app:cardCornerRadius="10dp">
+                        android:orientation="vertical">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="vertical">
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="60dp"
+                            android:text="Josh Smith"
+                            android:textSize="25sp"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:layout_marginTop="60dp"
-                                android:text="Josh Smith"
-                                android:textSize="25sp"
-                                android:textStyle="bold" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="10dp"
+                            android:text="Napier, Computer Science"
+                            android:textSize="17sp" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Napier, Computer Science"
-                                android:textSize="17sp"
-                                android:layout_marginTop="10dp"
-                                android:layout_gravity="center_horizontal"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="20dp"
+                            android:text="The unnoticed genius who lives in study room 3................................................................................................................................................................................................................"
+                            android:textAlignment="center"
+                            android:textSize="18sp"
+                            android:textStyle="italic" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:layout_marginTop="20dp"
-                                android:text="The unnoticed genius who lives in study room 3................................................................................................................................................................................................................"
-                                android:textAlignment="center"
-                                android:textSize="18sp"
-                                android:textStyle="italic" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginTop="10dp"
+                            android:text="Edinburgh, Scotland"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Edinburgh, Scotland"
-                                android:textSize="18sp"
-                                android:layout_marginTop="10dp"
-                                android:textStyle="bold"
-                                android:layout_gravity="center_horizontal"/>
+                    </LinearLayout>
 
-                        </LinearLayout>
+                </androidx.cardview.widget.CardView>
 
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
+            </LinearLayout>
 
         </RelativeLayout>
 
@@ -112,8 +113,8 @@
         android:layout_marginEnd="235dp"
         android:layout_marginRight="235dp"
         android:layout_marginBottom="53dp"
-        android:text="My Friends"
-        android:onClick="showFriends"/>
+        android:onClick="showFriends"
+        android:text="My Friends" />
 
     <Button
         android:id="@+id/btnGroups"
@@ -131,7 +132,7 @@
         android:layout_marginEnd="35dp"
         android:layout_marginRight="35dp"
         android:layout_marginBottom="53dp"
-        android:text="My Groups"
-        android:onClick="showGroups"/>
+        android:onClick="showGroups"
+        android:text="My Groups" />
 
 </RelativeLayout>
