--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -40,9 +40,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#383aa1"
                     android:gravity="center"
                     android:text=" Chemistry \n 2/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
 
             </androidx.cardview.widget.CardView>
@@ -66,9 +68,11 @@
                     android:id="@+id/textView7"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#5254ab"
                     android:gravity="center"
                     android:text=" Digital Art \n 3/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -77,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                app:backgroundTint="#F57F17" />
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -90,9 +94,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#383aa1"
                     android:gravity="center"
                     android:text=" History \n 1/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -101,7 +107,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                app:backgroundTint="#B71C1C" />
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -114,9 +120,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#5254ab"
                     android:gravity="center"
                     android:text=" Film \n 9/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -125,7 +133,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                app:backgroundTint="#33691E" />
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -138,9 +146,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#383aa1"
                     android:gravity="center"
                     android:text=" English Literature \n 4/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -149,7 +159,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                app:backgroundTint="#E040FB" />
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -162,9 +172,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#5254ab"
                     android:gravity="center"
                     android:text=" French \n 2/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -172,7 +184,8 @@
                 android:id="@+id/button10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Join" />
+                android:text="Join"
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -185,9 +198,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#383aa1"
                     android:gravity="center"
                     android:text=" Geology \n 1/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -196,7 +211,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                app:backgroundTint="#7C4DFF" />
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -209,9 +224,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="#5254ab"
                     android:gravity="center"
                     android:text=" Sports Science \n 5/10 members"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="#FFFFFF"
                     android:textSize="34sp"></TextView>
             </androidx.cardview.widget.CardView>
 
@@ -220,7 +237,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Join"
-                app:backgroundTint="#00838F" />
+                app:backgroundTint="#006064" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
